# sib-energy

./: .gitignore  README.md  initial_plan.md  install-systemd.sh  pyproject.toml  shelly-cloud-plan.md  sib-energy.html  update_db.sh
config/: diary.md  shelly-setup.md  tariffs.yaml
src/energy/: __init__.py  cli.py  db.py  generate_prompt.py  models.py  tariffs.py
src/energy/analysis/: __init__.py  sessions.py  summary.py
src/energy/collectors/: __init__.py  airbnb.py  eon.py  home_assistant.py  huum.py  open_meteo.py  shelly.py  shelly_csv.py  shelly_local.py
src/energy/reports/: __init__.py  daily_hourly.py
systemd/: sib-energy-logrotate.conf  sib-energy-update.service  sib-energy-update.timer
tests/: test_sessions.py
tests/collectors/: test_home_assistant.py
